tests/do/tmp/18_invalid_loop_header.stderr
error[InvalidLoopHeader]: loop 头部语法无效
 --> /._/doc/do/tests/do/cases/err/18_invalid_loop_header.do:3:13
 hint: loop 头部支持 `loop {}`, `loop cond {}`, `loop v := iterable {}`, `loop v, i := iterable {}`.
 3 |     loop val, idx, x := list_a {
   |             ^
